xserver-xorg-video-cirrus (1:1.3.2-1) UNRELEASED; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.8.3.
  * Build against Xserver 1.7.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 05 Dec 2009 10:53:56 +0200

xserver-xorg-video-cirrus (1:1.3.1-1) unstable; urgency=low

  [ Julien Cristau ]
  * Update debian/copyright from upstream's COPYING.

  [ Brice Goglin ]
  * New upstream release.
  * Bump Standards-Version to 3.8.2.

 -- Brice Goglin <bgoglin@debian.org>  Sun, 19 Jul 2009 23:52:36 +0200

xserver-xorg-video-cirrus (1:1.3.0-1) unstable; urgency=low

  [ David Nusinow ]
  * Remove 01_gen_pci_ids.diff. The X server now uses an internal table to
    pick a driver during autoconfig.
    + Disable patch system and remove quilt from build-dep

  [ Julien Cristau ]
  * New upstream release.
  * Add README.source, bump Standards-Version to 3.8.1.

 -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 18:00:08 +0200

xserver-xorg-video-cirrus (1:1.2.1-4) unstable; urgency=low

  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 09:57:09 +0100

xserver-xorg-video-cirrus (1:1.2.1-3) experimental; urgency=low

  * Merge changes from 1:1.2.1-1.lenny1.
  * Run autoreconf on build.  Build-depend on automake, libtool and
    xutils-dev.
  * Handle parallel builds.
  * Build against xserver 1.6 rc1.
  * Add myself to Uploaders.

 -- Julien Cristau <jcristau@debian.org>  Sun, 25 Jan 2009 21:39:31 +0100

xserver-xorg-video-cirrus (1:1.2.1-2) experimental; urgency=low

  * Build against xserver 1.5.

 -- Julien Cristau <jcristau@debian.org>  Thu, 04 Sep 2008 14:49:26 +0200

xserver-xorg-video-cirrus (1:1.2.1-1.lenny1) unstable; urgency=high

  * Cherry-pick from upstream:
    alpine: fix order of arguments of PCI_WRITE_LONG().

 -- Julien Cristau <jcristau@debian.org>  Sun, 25 Jan 2009 21:10:09 +0100

xserver-xorg-video-cirrus (1:1.2.1-1) unstable; urgency=low

  * New upstream release.