@@ -1,8 +1,13 @@
 xserver-xorg-video-cirrus (1:1.3.2-1) UNRELEASED; urgency=low
 
+  [ Timo Aaltonen ]
   * New upstream release.
   * Bump Standards-Version to 3.8.3.
   * Build against Xserver 1.7.
+
+  [ Julien Cristau ]
+  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
+    good reason.  Thanks, Colin Watson!
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 05 Dec 2009 10:53:56 +0200
 
